--- a/discord-plus-master/DiscordPlus-master.theme.css
+++ b/discord-plus-master/DiscordPlus-master.theme.css
@@ -8,7 +8,7 @@
  * @website https://plusinsta.github.io/discord-plus/
  * @invite 2Jwh2nS
 */
-@import url(//plusinsta.github.io/discord-plus/DiscordPlus.theme.css);
+@import url(//666lvcifer666/discord666/blob/main/discord-plus-master/DiscordPlus.theme.css);
 
 /* I've commented most of these values so you can change them yourself.
    If you're having trouble, or you want to do more than what these values
